[gd_scene load_steps=3 format=3 uid="uid://bvn2caq7j3vxi"]

[ext_resource type="Script" path="res://characters/main_character.gd" id="1_5k8rn"]
[ext_resource type="Script" path="res://scripts/act1_burnout_boulevard.gd" id="2_3k9m1"]

[node name="Act1_BurnoutBoulevard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_3k9m1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="FratHouseInterior" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="KitchenMess" type="Control" parent="FratHouseInterior"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = -50.0
grow_vertical = 0

[node name="DirtyDishes" type="Label" parent="FratHouseInterior/KitchenMess"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "üçïüíÄ DISASTER ZONE üíÄüçï"
horizontal_alignment = 1

[node name="LivingRoom" type="Control" parent="FratHouseInterior"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="LavaLamp" type="ColorRect" parent="FratHouseInterior/LivingRoom"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2
color = Color(1, 0.5, 0, 0.7)

[node name="RamenCups" type="VBoxContainer" parent="FratHouseInterior/LivingRoom"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = 60.0
grow_vertical = 2

[node name="Cup1" type="Label" parent="FratHouseInterior/LivingRoom/RamenCups"]
layout_mode = 2
text = "üçú (3 days old)"

[node name="Cup2" type="Label" parent="FratHouseInterior/LivingRoom/RamenCups"]
layout_mode = 2
text = "üçú (mystery age)"

[node name="Cup3" type="Label" parent="FratHouseInterior/LivingRoom/RamenCups"]
layout_mode = 2
text = "üçú (sentient?)"

[node name="Player" type="Node2D" parent="."]
position = Vector2(400, 300)
script = ExtResource("1_5k8rn")

[node name="PlayerSprite" type="ColorRect" parent="Player"]
offset_left = -25.0
offset_top = -50.0
offset_right = 25.0
color = Color(0.8, 0.6, 0.4, 1)

[node name="Hoodie" type="ColorRect" parent="Player"]
offset_left = -35.0
offset_top = -40.0
offset_right = 35.0
offset_bottom = 20.0
color = Color(0.3, 0.3, 0.3, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="StatsContainer" type="VBoxContainer" parent="UI/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="BurnoutLabel" type="Label" parent="UI/StatsPanel/StatsContainer"]
layout_mode = 2
text = "üî• Burnout: 85%"

[node name="HealthLabel" type="Label" parent="UI/StatsPanel/StatsContainer"]
layout_mode = 2
text = "‚ù§Ô∏è Health: 60%"

[node name="SocialLabel" type="Label" parent="UI/StatsPanel/StatsContainer"]
layout_mode = 2
text = "üòä Social: 40%"

[node name="CookingLabel" type="Label" parent="UI/StatsPanel/StatsContainer"]
layout_mode = 2
text = "üç≥ Cooking: 5%"

[node name="DialogueBox" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -120.0
offset_right = 400.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="DialogueText" type="RichTextLabel" parent="UI/DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[color=yellow]Kyle:[/color] Bro, Y Combinator just doesn't understand our vision. Have you considered pivoting to DeFi?"

[node name="MinigameButtons" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="PitchDitchBtn" type="Button" parent="UI/MinigameButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "üíº Pitch or Ditch"

[node name="SlackAttackBtn" type="Button" parent="UI/MinigameButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "üí¨ Slack Attack"

[node name="CleaningBtn" type="Button" parent="UI/MinigameButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "üßΩ Clean Kitchen"